--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "lucide-react": "^0.469.0",
+    "framer-motion": "^12.0.11",
+    "html2pdf.js": "^0.9.0",
+    "lucide-react": "^0.474.0",
     "next": "15.1.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.1"
   },
   "devDependencies": {
     "typescript": "^5",
