--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.6",
     "framer-motion": "^12.0.11",
     "html2pdf.js": "^0.9.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
     "next": "15.1.2",
     "react": "^19.0.0",
